crates/tui/tests/snapshots/snapshot_tests__snapshot_cluster_screen_empty.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Cluster                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
┌Cluster Information───────────────────────────────────────────────────────────┐
│                 No cluster info loaded. Press 'r' to refresh.                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ 1:Search 2:Indexes 3:Cluster 4:Jobs | q:Quit                                 │
└──────────────────────────────────────────────────────────────────────────────┘
