crates/tui/tests/snapshots/snapshot_tests__snapshot_cluster_screen_loading.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Cluster | [?] Unknown                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Cluster Information───────────────────────────────────────────────────────────┐
│                            Loading cluster info...                           │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Loading... 0% | 1:Search 2:Indexes 3:Cluster 4:Jobs 5:Health | q:Quit        │
└──────────────────────────────────────────────────────────────────────────────┘
