crates/tui/tests/snapshots/snapshot_tests__snapshot_confirm_delete_popup.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Jobs | [?] Unknown                                               │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Jobs───────────────────────────────────────────────────────────────────┐
│Sel  SID ↑                    Status          Duration   Results    Events    │
│[ ]  scheduler_admin_search_1 Done            5.23s      100        500       │
│[ ]  admin_search_9876543210  Running (65%)   12.45s     450        2000      │
│                                                                              │
│                                                                              │
│                                                                              │
│               ┌Confirm Delete────────────────────────────────┐               │
│               │   Delete job admin_search_9876543210? (y/n)  │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ 1:Search 2:Indexes 3:Cluster 4:Jobs 5:Health 6:Saved 7:Logs 8:Apps 9:Users | │
└──────────────────────────────────────────────────────────────────────────────┘
