crates/tui/tests/snapshots/snapshot_tests__snapshot_error_state.snap
---
source: crates/tui/tests/snapshot_tests.rs
assertion_line: 251
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Jobs                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Jobs───────────────────────────────────────────────────────────────────┐
│                     No jobs loaded. Press 'r' to refresh.                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                 ┌──────────────────────────────────────────────────────────┐ │
│                 │ ERR Connection failed: timeout                           │ │
│                 └──────────────────────────────────────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ 1:Search 2:Indexes 3:Cluster 4:Jobs 5:Health | q:Quit                                 │
└──────────────────────────────────────────────────────────────────────────────┘
