crates/tui/tests/snapshots/snapshot_tests__snapshot_footer_hints_indexes_screen.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Indexes | [?] Unknown                                            │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Indexes───────────────────────────────────────────────────────────────────────┐
│test_index - 1000000 events, 50000 MB                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next Screen | Shift+Tab:Previous Screen | r:Refresh ...| ?:Help | q:Quit │
└──────────────────────────────────────────────────────────────────────────────┘
