crates/tui/tests/snapshots/snapshot_tests__snapshot_footer_hints_narrow_terminal.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────┐
│Splunk TUI - Jobs | [?] Unknown                           │
│ |                                                        │
└──────────────────────────────────────────────────────────┘
┌Search Jobs───────────────────────────────────────────────┐
│Sel  SID  Status          Duration   Results    Events    │
│[ ]  sche Done            5.23s      100        500       │
│[ ]  admi Running (65%)   12.45s     450        2000      │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│ Tab:Next Screen | Shift+Tab:Previous Screen | r:Refresh .│
└──────────────────────────────────────────────────────────┘
