crates/tui/tests/snapshots/snapshot_tests__snapshot_footer_hints_settings_screen.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Settings | [?] Unknown                                           │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
┌──────────────────────────────────────────────────────────────────────────────┐
│Theme:          Default                                                       │
│Auto-refresh:   [Off]                                                         │
│Sort column:    sid                                                           │
│Sort direction: asc                                                           │
│Search history: 0 items                                                       │
│Profile:        N/A                                                           │
│                                                                              │
│Search Defaults                                                               │
│  Earliest time: -24h                                                         │
│  Latest time:   now                                                          │
│  Max results:   1000                                                         │
│                                                                              │
│Press 't' to cycle theme                                                      │
│Press 'a' to toggle auto-refresh                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next Screen | Shift+Tab:Previous Screen | t:Theme a:Auto ...| ?:Help | q:│
└──────────────────────────────────────────────────────────────────────────────┘
